Fix vertical alignment in style.css

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   /* CENTRAGE VERTICAL ET HORIZONTAL */
   display: flex;
   justify-content: center; /* centré horizontalement */
-  align-items: bottom ;     /* centré verticalement */
+  align-items: center;     /* centré verticalement */
   height: 100vh;           /* prend toute la hauteur de la page */
 }
 
@@ -15,7 +15,7 @@ body {
   color: white;        /* texte blanc */
   font-size: 60px;     /* taille du texte */
   letter-spacing: 3px; /* espacement des lettres */
-  text-align: center;
+  text-align: center bottom ; /* emplacement du texte */
 }
 /* GLOBAL */
 body {
